@@ -13,7 +13,11 @@ in development
   - Fix: eps comparison fails for vectors of incompatible types, e.g. double and
     uint8. Changed assert_equals to compare eps only for equal numeric types.
   - Fix: Rerunning a testcase from the mlUnit GUI does not update the test's
-    implementation.
+    implementation. [#22]
+  - Fix: assert_error fails on R2007b and later. [#21}
+
+  [#21] https://sourceforge.net/p/mlunit/bugs/21/
+  [#22] https://sourceforge.net/p/mlunit/bugs/22/
 
 
 mlUnit 1.6.4 (2013-05-27)
